--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write .",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "start": "node dist/main",
-    "start:nest": "nest start"
+    "start:nest": "nest start",
+    "test": "jest"
   },
   "dependencies": {
     "@nestjs/common": "10.0.0",
@@ -29,9 +30,10 @@
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
     "@nestjs/schematics": "10.0.0",
-    "@nestjs/testing": "10.0.0",
+    "@nestjs/testing": "^10.2.10",
     "@types/bcryptjs": "2.4.4",
     "@types/express": "4.17.17",
+    "@types/jest": "^29.5.10",
     "@types/node": "20.3.1",
     "@types/pg": "8.10.8",
     "@types/react": "18.2.22",
@@ -43,6 +45,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
+    "jest": "^29.7.0",
     "prettier": "3.0.0",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
