--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -24,8 +24,7 @@
     "pg": "8.11.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
-    "set-interval-async": "3.0.3",
-    "three": "0.156.1"
+    "set-interval-async": "3.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
@@ -49,6 +48,7 @@
     "prettier": "3.0.0",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
