--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build:all": "turbo run build",
     "dev:all": "turbo run dev",
+    "format:check": "turbo run format:check",
     "format:all": "turbo run format",
     "lint:all": "turbo run lint",
     "start:all": "turbo run start"
