Add `format:check` to Turbo script

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "pipeline": {
     "dev": {},
     "format": {},
+    "format:check": {},
     "build": {
       "outputs": [".next/**", "!.next/cache/**"]
     },
