Fix Bun version in GH Action example

--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -14,7 +14,7 @@ jobs:
       # This line makes that you can use Bun inside the GitHub Action "computer"
       - uses: oven-sh/setup-bun@v1
         with:
-          version: 1.0.14 # Same as in the devcontainer
+          bun-version: 1.0.14 # Same as in the devcontainer
 
       - name: Install dependencies with Bun
         run: bun install
